@@ -1,9 +1,10 @@
+#include <stdlib.h>
 #include <propeller.h>
 #include "test31.h"
 
 void test31::Fun(int32_t Y)
 {
-  int32_t	_tmp__0001;
+  int32_t 	_tmp__0001;
   switch((_tmp__0001 = X + Y)) {
   case 10:
     OUTA ^= 0x1;
