@@ -1,3 +1,4 @@
+#include <stdlib.h>
 #include <propeller.h>
 #include "test48.h"
 
